Tried to fix the frame play
Didn't do it atm

--- a/2DHockey/2DHockey/MainGame.resx
+++ b/2DHockey/2DHockey/MainGame.resx
@@ -123,6 +123,71 @@
   <metadata name="PlayerAnimationList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>88, 17</value>
   </metadata>
+  <data name="PlayerAnimationList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABk
+        DQAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABMgEAATIBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwAByAMAATIDAAEBAQABCAUAARABJxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD/AP8AOAAQ/CIA
+        CvwKAAb8fAAQ/CIACvwKAAb8fAAQ/CIACvwKAAb8wgAG/MIABvzCAAb8dQAHFisABxYXAAP8dQAHFisA
+        BxYXAAP8dQAHFisABxYXAAP8dQAHFisABxYXAAP8dQADFgQAF/wUAAcWAwAH/AYWfwADFgQAF/wUAAcW
+        AwAH/AYWfwADFgQAF/wUAAcWAwAH/AYWhgAD/A0ABPwDAAcWFAAD/AcABhYEAAP8fwAD/A0ABPwDAAcW
+        FAAD/AcABhYEAAP8fwAD/A0ABPwDAAcWFAAD/AcABhYEAAP8fwAD/A0ABPwDAAcWHgADFgcAA/x/AAP8
+        DQAE/AMABxYeAAMWBwAD/H8AA/wNAAT8AwAHFh4AAxYHAAP8fwAD/A0ABPwDAAcWHgADFgcAA/x7AAcW
+        DfwEAAP8FwAHFgf8AwAH/H4ABxYN/AQAA/wXAAcWB/wDAAf8fgAHFg38BAAD/BcABxYH/AMAB/x7AA0W
+        JQANFokADRYlAA0WiQANFiUADRaGAAYWBAAGFgr8GAAGFgQABhYK/HwABhYEAAYWCvwYAAYWBAAGFgr8
+        fAAGFgQABhYK/BgABhYEAAYWCvx8AAYWBAAGFgr8GAAGFgQABhYK/H8AAxYEAAYWBwAH/BcAAxYEAAYW
+        BwAH/HsAAxYEAAYWBwAH/BcAAxYEAAYWBwAH/HsAAxYEAAYWBwAH/BcAAxYEAAYWBwAH/IgADvwkAA78
+        iAAO/CQADvyIAA78JAAO/HgAHvwUAB78eAAe/BQAHvx4AB78FAAe/HgAHvwUAB78eAAK/AoABvwYAAr8
+        CgAG/HwACvwKAAb8GAAK/AoABvx8AAr8CgAG/BgACvwKAAb8hgAG/AQAA/wlAAb8BAAD/IkABvwEAAP8
+        JQAG/AQAA/yJAAb8BAAD/CUABvwEAAP8dQABQgFNAT4HAAE+AwABKAMAAcgDAAEyAwABAQEAAQEFAAF4
+        AQUWAAP/AgABPwIAAQ8B/wHAAQ8BwAEAAv8RAAE/AgABDwH/AcABDwHAAQAC/xEAAT8CAAEPAf8BwAEP
+        AcABAAL/EQABPwIAAQ8B/wHAAQ8BwAEAAv8RAAEHAfABAAEPAf8BwAEBAfwBAAH8EgABBwHwAQABDwH/
+        AcABAQH8AQAB/BIAAQcB8AEAAQ8B/wHAAQEB/AEAAfwRAAH/AcAB8AIAAR8B/wHwATwTAAH/AcAB8AIA
+        AR8B/wHwATwTAAH/AcAB8AIAAR8B/wHwATwTAAH/AfgDAAEfAf8B/gEDAYASAAH/AfgDAAEfAf8B/gED
+        AYASAAH/AfgDAAEfAf8B/gEDAYASAAH/AfgDAAEfAf8B/gEDAYASAAH/AfgDAAEfAf8B/gMAAQcB8A8A
+        Af8B+AMAAR8B/wH+AwABBwHwDwAB/wH4AwABHwH/Af4DAAEHAfAPAAL/BAABPwH/AcACAAEHAfAPAAL/
+        BAABPwH/AcACAAEHAfAPAAL/BAABPwH/AcACAAEHAfAPAAL/AfADAAE/Af8B/AIAAQcB8A8AAv8B8AMA
+        AT8B/wH8AgABBwHwDwAC/wHwAwABPwH/AfwCAAEHAfAPAAL/AfADAAE/Af8B/AIAAQcB8A8AAv8DAAED
+        Av8BwAIAAT8B8A8AAv8DAAEDAv8BwAIAAT8B8A8AAv8DAAEDAv8BwAIAAT8B8A8AAf8B+AIAAQ8C/wH+
+        AgABAwH/AfAPAAH/AfgCAAEPAv8B/gIAAQMB/wHwDwAB/wH4AgABDwL/Af4CAAEDAf8B8A8AAf8BwAMA
+        Av8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMA
+        AT8B8A8AAf8B+AMAAv8B/gMAAT8B8A8AAf8B+AMAAv8B/gMAAT8B8A8AAf8B+AMAAv8B/gMAAT8B8A8A
+        Af8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMA
+        Av8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMA
+        AT8B8A8AAf8BwAIAAQ8C/wHwAgABAwH/AfAPAAH/AcACAAEPAv8B8AIAAQMB/wHwDwAB/wHAAgABDwL/
+        AfACAAEDAf8B8A8AAv8CAAF/A/8BwAEAAR8B/wHwDwAC/wIAAX8D/wHAAQABHwH/AfAPAAL/AgABfwP/
+        AcABAAEfAf8B8A8ACw==
+</value>
+  </data>
   <metadata name="FrameTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>247, 17</value>
   </metadata>
