I added the team selection menu

--- a/2DHockey/2DHockey/TeamSelection.resx
+++ b/2DHockey/2DHockey/TeamSelection.resx
@@ -117,19 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="tick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="PlayerAnimationList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>88, 17</value>
-  </metadata>
-  <data name="PlayerAnimationList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="ImageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABk
-        DQAAAk1TRnQBSQFMAgEBAgEAATABAAEwAQABMgEAATIBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwAByAMAATIDAAEBAQABCAUAARABJxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
+        FgAAAk1TRnQBSQFMAgEBBQEAARgBAAEYAQABMgEAATIBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwAByAMAAWQDAAEBAQABCAUAASABThgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
         AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
@@ -156,42 +153,77 @@
         AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
         ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
         AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
-        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD/AP8AOAAQ/CIA
-        CvwKAAb8fAAQ/CIACvwKAAb8fAAQ/CIACvwKAAb8wgAG/MIABvzCAAb8dQAHFisABxYXAAP8dQAHFisA
-        BxYXAAP8dQAHFisABxYXAAP8dQAHFisABxYXAAP8dQADFgQAF/wUAAcWAwAH/AYWfwADFgQAF/wUAAcW
-        AwAH/AYWfwADFgQAF/wUAAcWAwAH/AYWhgAD/A0ABPwDAAcWFAAD/AcABhYEAAP8fwAD/A0ABPwDAAcW
-        FAAD/AcABhYEAAP8fwAD/A0ABPwDAAcWFAAD/AcABhYEAAP8fwAD/A0ABPwDAAcWHgADFgcAA/x/AAP8
-        DQAE/AMABxYeAAMWBwAD/H8AA/wNAAT8AwAHFh4AAxYHAAP8fwAD/A0ABPwDAAcWHgADFgcAA/x7AAcW
-        DfwEAAP8FwAHFgf8AwAH/H4ABxYN/AQAA/wXAAcWB/wDAAf8fgAHFg38BAAD/BcABxYH/AMAB/x7AA0W
-        JQANFokADRYlAA0WiQANFiUADRaGAAYWBAAGFgr8GAAGFgQABhYK/HwABhYEAAYWCvwYAAYWBAAGFgr8
-        fAAGFgQABhYK/BgABhYEAAYWCvx8AAYWBAAGFgr8GAAGFgQABhYK/H8AAxYEAAYWBwAH/BcAAxYEAAYW
-        BwAH/HsAAxYEAAYWBwAH/BcAAxYEAAYWBwAH/HsAAxYEAAYWBwAH/BcAAxYEAAYWBwAH/IgADvwkAA78
-        iAAO/CQADvyIAA78JAAO/HgAHvwUAB78eAAe/BQAHvx4AB78FAAe/HgAHvwUAB78eAAK/AoABvwYAAr8
-        CgAG/HwACvwKAAb8GAAK/AoABvx8AAr8CgAG/BgACvwKAAb8hgAG/AQAA/wlAAb8BAAD/IkABvwEAAP8
-        JQAG/AQAA/yJAAb8BAAD/CUABvwEAAP8dQABQgFNAT4HAAE+AwABKAMAAcgDAAEyAwABAQEAAQEFAAF4
-        AQUWAAP/AgABPwIAAQ8B/wHAAQ8BwAEAAv8RAAE/AgABDwH/AcABDwHAAQAC/xEAAT8CAAEPAf8BwAEP
-        AcABAAL/EQABPwIAAQ8B/wHAAQ8BwAEAAv8RAAEHAfABAAEPAf8BwAEBAfwBAAH8EgABBwHwAQABDwH/
-        AcABAQH8AQAB/BIAAQcB8AEAAQ8B/wHAAQEB/AEAAfwRAAH/AcAB8AIAAR8B/wHwATwTAAH/AcAB8AIA
-        AR8B/wHwATwTAAH/AcAB8AIAAR8B/wHwATwTAAH/AfgDAAEfAf8B/gEDAYASAAH/AfgDAAEfAf8B/gED
-        AYASAAH/AfgDAAEfAf8B/gEDAYASAAH/AfgDAAEfAf8B/gEDAYASAAH/AfgDAAEfAf8B/gMAAQcB8A8A
-        Af8B+AMAAR8B/wH+AwABBwHwDwAB/wH4AwABHwH/Af4DAAEHAfAPAAL/BAABPwH/AcACAAEHAfAPAAL/
-        BAABPwH/AcACAAEHAfAPAAL/BAABPwH/AcACAAEHAfAPAAL/AfADAAE/Af8B/AIAAQcB8A8AAv8B8AMA
-        AT8B/wH8AgABBwHwDwAC/wHwAwABPwH/AfwCAAEHAfAPAAL/AfADAAE/Af8B/AIAAQcB8A8AAv8DAAED
-        Av8BwAIAAT8B8A8AAv8DAAEDAv8BwAIAAT8B8A8AAv8DAAEDAv8BwAIAAT8B8A8AAf8B+AIAAQ8C/wH+
-        AgABAwH/AfAPAAH/AfgCAAEPAv8B/gIAAQMB/wHwDwAB/wH4AgABDwL/Af4CAAEDAf8B8A8AAf8BwAMA
-        Av8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMA
-        AT8B8A8AAf8B+AMAAv8B/gMAAT8B8A8AAf8B+AMAAv8B/gMAAT8B8A8AAf8B+AMAAv8B/gMAAT8B8A8A
-        Af8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMA
-        Av8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMAAT8B8A8AAf8BwAMAAv8B8AMA
-        AT8B8A8AAf8BwAIAAQ8C/wHwAgABAwH/AfAPAAH/AcACAAEPAv8B8AIAAQMB/wHwDwAB/wHAAgABDwL/
-        AfACAAEDAf8B8A8AAv8CAAF/A/8BwAEAAR8B/wHwDwAC/wIAAX8D/wHAAQABHwH/AfAPAAL/AgABfwP/
-        AcABAAEfAf8B8A8ACw==
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD/AP8AOAAK8woA
+        BvOuAArzCgAG864ACvMKAAbzwgAG88IABvPCAAbzpwAHFhcAA/OnAAcWFwAD86cABxYXAAPzpwAHFhcA
+        A/OnAAcWAwAH8wYWsQAHFgMAB/MGFrEABxYDAAfzBha4AAPzBwAGFgQAA/OxAAPzBwAGFgQAA/OxAAPz
+        BwAGFgQAA/O7AAMWBwAD87sAAxYHAAPzuwADFgcAA/O7AAMWBwAD860ABxYH8wMAB/OwAAcWB/MDAAfz
+        sAAHFgfzAwAH860ADRa7AA0WuwANFrgABhYEAAYWCvOuAAYWBAAGFgrzrgAGFgQABhYK864ABhYEAAYW
+        CvOxAAMWBAAGFgcAB/OtAAMWBAAGFgcAB/OtAAMWBAAGFgcAB/O6AA7zugAO87oADvOqAB7zqgAe86oA
+        HvOqAB7zqgAK8woABvOuAArzCgAG864ACvMKAAbzuAAG8wQAA/O7AAbzBAAD87sABvMEAAPz/wD/AP8A
+        3gAK/AoABvwYAAodCgAGHRgACk0KAAZNGAAKRwoABkcYAAr8CgAG/BgACh0KAAYdGAAKTQoABk0YAApH
+        CgAGRxgACvwKAAb8GAAKHQoABh0YAApNCgAGTRgACkcKAAZHLAAG/CwABh0sAAZNLAAGRywABvwsAAYd
+        LAAGTSwABkcsAAb8LAAGHSwABk0sAAZHEQAHFhcAA/wRAAcWFwADHREABxYXAANNEQAHFhcAA0cRAAcW
+        FwAD/BEABxYXAAMdEQAHFhcAA00RAAcWFwADRxEABxYXAAP8EQAHFhcAAx0RAAcWFwADTREABxYXAANH
+        EQAHFhcAA/wRAAcWFwADHREABxYXAANNEQAHFhcAA0cRAAcWAwAH/AYWGwAHFgMABx0GFhsABxYDAAdN
+        BhYbAAcWAwAHRwYWGwAHFgMAB/wGFhsABxYDAAcdBhYbAAcWAwAHTQYWGwAHFgMAB0cGFhsABxYDAAf8
+        BhYbAAcWAwAHHQYWGwAHFgMAB00GFhsABxYDAAdHBhYiAAP8BwAGFgQAA/wbAAMdBwAGFgQAAx0bAANN
+        BwAGFgQAA00bAANHBwAGFgQAA0cbAAP8BwAGFgQAA/wbAAMdBwAGFgQAAx0bAANNBwAGFgQAA00bAANH
+        BwAGFgQAA0cbAAP8BwAGFgQAA/wbAAMdBwAGFgQAAx0bAANNBwAGFgQAA00bAANHBwAGFgQAA0clAAMW
+        BwAD/CUAAxYHAAMdJQADFgcAA00lAAMWBwADRyUAAxYHAAP8JQADFgcAAx0lAAMWBwADTSUAAxYHAANH
+        JQADFgcAA/wlAAMWBwADHSUAAxYHAANNJQADFgcAA0clAAMWBwAD/CUAAxYHAAMdJQADFgcAA00lAAMW
+        BwADRxcABxYH/AMAB/waAAcWBx0DAAcdGgAHFgdNAwAHTRoABxYHRwMAB0caAAcWB/wDAAf8GgAHFgcd
+        AwAHHRoABxYHTQMAB00aAAcWB0cDAAdHGgAHFgf8AwAH/BoABxYHHQMABx0aAAcWB00DAAdNGgAHFgdH
+        AwAHRxcADRYlAA0WJQANFiUADRYlAA0WJQANFiUADRYlAA0WJQANFiUADRYlAA0WJQANFiIABhYEAAYW
+        CvwYAAYWBAAGFgodGAAGFgQABhYKTRgABhYEAAYWCkcYAAYWBAAGFgr8GAAGFgQABhYKHRgABhYEAAYW
+        Ck0YAAYWBAAGFgpHGAAGFgQABhYK/BgABhYEAAYWCh0YAAYWBAAGFgpNGAAGFgQABhYKRxgABhYEAAYW
+        CvwYAAYWBAAGFgodGAAGFgQABhYKTRgABhYEAAYWCkcbAAMWBAAGFgcAB/wXAAMWBAAGFgcABx0XAAMW
+        BAAGFgcAB00XAAMWBAAGFgcAB0cXAAMWBAAGFgcAB/wXAAMWBAAGFgcABx0XAAMWBAAGFgcAB00XAAMW
+        BAAGFgcAB0cXAAMWBAAGFgcAB/wXAAMWBAAGFgcABx0XAAMWBAAGFgcAB00XAAMWBAAGFgcAB0ckAA78
+        JAAOHSQADk0kAA5HJAAO/CQADh0kAA5NJAAORyQADvwkAA4dJAAOTSQADkcUAB78FAAeHRQAHk0UAB5H
+        FAAe/BQAHh0UAB5NFAAeRxQAHvwUAB4dFAAeTRQAHkcUAB78FAAeHRQAHk0UAB5HFAAK/AoABvwYAAod
+        CgAGHRgACk0KAAZNGAAKRwoABkcYAAr8CgAG/BgACh0KAAYdGAAKTQoABk0YAApHCgAGRxgACvwKAAb8
+        GAAKHQoABh0YAApNCgAGTRgACkcKAAZHIgAG/AQAA/wlAAYdBAADHSUABk0EAANNJQAGRwQAA0clAAb8
+        BAAD/CUABh0EAAMdJQAGTQQAA00lAAZHBAADRyUABvwEAAP8JQAGHQQAAx0lAAZNBAADTSUABkcEAANH
+        EQABQgFNAT4HAAE+AwABKAMAAcgDAAFkAwABAQEAAQEFAAHwAQoWAAP/AgABPwEAAQMB/wH8FwABPwEA
+        AQMB/wH8FwABPwEAAQMB/wH8FwABPwEAAQMB/wH8FwABBwHwAQMB8BgAAQcB8AEDAfAYAAEHAfABAwHw
+        FwAB/wHAAfAZAAH/AcAB8BkAAf8BwAHwGQAB/wH4AQ4ZAAH/AfgBDhkAAf8B+AEOGQAB/wH4AQ4ZAAH/
+        AfgDAAEfAcAVAAH/AfgDAAEfAcAVAAH/AfgDAAEfAcAVAAL/AwABHwHAFQAC/wMAAR8BwBUAAv8DAAEf
+        AcAVAAL/AfACAAEfAcAVAAL/AfACAAEfAcAVAAL/AfACAAEfAcAVAAL/AfACAAEfAcAVAAL/AwAB/wHA
+        FQAC/wMAAf8BwBUAAv8DAAH/AcAVAAH/AfgCAAEPAf8BwBUAAf8B+AIAAQ8B/wHAFQAB/wH4AgABDwH/
+        AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AfgDAAH/
+        AcAVAAH/AfgDAAH/AcAVAAH/AfgDAAH/AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/
+        AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AcADAAH/AcAVAAH/AcACAAEP
+        Af8BwBUAAf8BwAIAAQ8B/wHAFQAB/wHAAgABDwH/AcAVAAL/AgABfwH/AcAVAAL/AgABfwH/AcAVAAL/
+        AgABfwH/AcAWAAE/AQABAwH/AfwBAAEPAcABAAL/AQABAwHwAQABPwH/AcABAAH8AQABDwH/AfAEAAE/
+        AQABAwH/AfwBAAEPAcABAAL/AQABAwHwAQABPwH/AcABAAH8AQABDwH/AfAEAAE/AQABAwH/AfwBAAEP
+        AcABAAL/AQABAwHwAQABPwH/AcABAAH8AQABDwH/AfAEAAE/AQABAwH/AfwBAAEPAcABAAL/AQABAwHw
+        AQABPwH/AcABAAH8AQABDwH/AfAEAAEHAfABAwHwAgABAQH8AQAB/AMAAX8BAAE/AwABHwHAAQ8BwAUA
+        AQcB8AEDAfACAAEBAfwBAAH8AwABfwEAAT8DAAEfAcABDwHABQABBwHwAQMB8AIAAQEB/AEAAfwDAAF/
+        AQABPwMAAR8BwAEPAcAEAAH/AcAB8AMAAT8B8AE8AwABDwH8AQ8DAAEDAf8BAwHABgAB/wHAAfADAAE/
+        AfABPAMAAQ8B/AEPAwABAwH/AQMBwAYAAf8BwAHwAwABPwHwATwDAAEPAfwBDwMAAQMB/wEDAcAGAAH/
+        AfgBDgMAAT8B/gEDAYACAAEPAf8BgAHgAgABAwH/AeABOAYAAf8B+AEOAwABPwH+AQMBgAIAAQ8B/wGA
+        AeACAAEDAf8B4AE4BgAB/wH4AQ4DAAE/Af4BAwGAAgABDwH/AYAB4AIAAQMB/wHgATgGAAH/AfgBDgMA
+        AT8B/gEDAYACAAEPAf8BgAHgAgABAwH/AeABOAYAAf8B+AMAAR8B/wH+AwABBwL/AYACAAEBAv8B4AMA
+        AX8DAAH/AfgDAAEfAf8B/gMAAQcC/wGAAgABAQL/AeADAAF/AwAB/wH4AwABHwH/Af4DAAEHAv8BgAIA
+        AQEC/wHgAwABfwMAAv8DAAEfAv8BwAIAAQcC/wHwAgABAQL/AfwDAAF/AwAC/wMAAR8C/wHAAgABBwL/
+        AfACAAEBAv8B/AMAAX8DAAL/AwABHwL/AcACAAEHAv8B8AIAAQEC/wH8AwABfwMAAv8B8AIAAR8C/wH8
+        AgABBwP/AgABAQP/AcACAAF/AwAC/wHwAgABHwL/AfwCAAEHA/8CAAEBA/8BwAIAAX8DAAL/AfACAAEf
+        Av8B/AIAAQcD/wIAAQED/wHAAgABfwMAAv8B8AIAAR8C/wH8AgABBwP/AgABAQP/AcACAAF/AwAC/wMA
+        A/8BwAIAAT8C/wHwAgABDwL/AfwCAAEDAf8DAAL/AwAD/wHAAgABPwL/AfACAAEPAv8B/AIAAQMB/wMA
+        Av8DAAP/AcACAAE/Av8B8AIAAQ8C/wH8AgABAwH/AwAB/wH4AgABDwL/Af4CAAEDA/8BgAIAA/8B4AIA
+        AT8B/wMAAf8B+AIAAQ8C/wH+AgABAwP/AYACAAP/AeACAAE/Af8DAAH/AfgCAAEPAv8B/gIAAQMD/wGA
+        AgAD/wHgAgABPwH/AwAB/wHAAwAC/wHwAwABPwH/AfwDAAEPAv8DAAEDAf8DAAH/AcADAAL/AfADAAE/
+        Af8B/AMAAQ8C/wMAAQMB/wMAAf8BwAMAAv8B8AMAAT8B/wH8AwABDwL/AwABAwH/AwAB/wHAAwAC/wHw
+        AwABPwH/AfwDAAEPAv8DAAEDAf8DAAH/AfgDAAL/Af4DAAE/Av8BgAIAAQ8C/wHgAgABAwH/AwAB/wH4
+        AwAC/wH+AwABPwL/AYACAAEPAv8B4AIAAQMB/wMAAf8B+AMAAv8B/gMAAT8C/wGAAgABDwL/AeACAAED
+        Af8DAAH/AcADAAL/AfADAAE/Af8B/AMAAQ8C/wMAAQMB/wMAAf8BwAMAAv8B8AMAAT8B/wH8AwABDwL/
+        AwABAwH/AwAB/wHAAwAC/wHwAwABPwH/AfwDAAEPAv8DAAEDAf8DAAH/AcADAAL/AfADAAE/Af8B/AMA
+        AQ8C/wMAAQMB/wMAAf8BwAMAAv8B8AMAAT8B/wH8AwABDwL/AwABAwH/AwAB/wHAAwAC/wHwAwABPwH/
+        AfwDAAEPAv8DAAEDAf8DAAH/AcADAAL/AfADAAE/Af8B/AMAAQ8C/wMAAQMB/wMAAf8BwAIAAQ8C/wHw
+        AgABAwL/AfwDAAP/AwABPwH/AwAB/wHAAgABDwL/AfACAAEDAv8B/AMAA/8DAAE/Af8DAAH/AcACAAEP
+        Av8B8AIAAQMC/wH8AwAD/wMAAT8B/wMAAv8CAAF/A/8BwAEAAR8D/wHwAQABBwP/AfwBAAEBAv8DAAL/
+        AgABfwP/AcABAAEfA/8B8AEAAQcD/wH8AQABAQL/AwAC/wIAAX8D/wHAAQABHwP/AfABAAEHA/8B/AEA
+        AQEC/wMACw==
 </value>
   </data>
-  <metadata name="FrameTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>247, 17</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>51</value>
-  </metadata>
 </root>
