--- a/2DHockey/2DHockey/MainGame.resx
+++ b/2DHockey/2DHockey/MainGame.resx
@@ -588,6 +588,7 @@
   </metadata>
   <metadata name="wintimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1132, 20</value>
+  </metadata>
   <metadata name="Buzzertime.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>300, 45</value>
   </metadata>
