--- a/2DHockey/2DHockey/My Project/Resources.resx
+++ b/2DHockey/2DHockey/My Project/Resources.resx
@@ -208,4 +208,7 @@
   <data name="IHaveWonned" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IHaveWonned.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="LETSAGO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LETSAGO.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
